Technical documentation file addded

--- a/Presentation/IBM_Presentation.html
+++ b/Presentation/IBM_Presentation.html
@@ -94,7 +94,7 @@
 				<section data-background="#94ffb8" data-background-transition="zoom" style="color:white">
 					<h2 style="color:white">Live View on Web</h2>
 					<a href="http://hkchat.mybluemix.net" target="_blank">Talkout on BlueMix</a>
-					<a href="http;//" target="_blank">Github Repository</a>
+					<a href="https://github.com/TalkOut-Ibm-Bluemix/TalkOut-Hackathon" target="_blank">Github Repository</a>
 				</section>
 				
 				
